--- a/soccer-streams-9.html
+++ b/soccer-streams-9.html
@@ -97,8 +97,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/tnt2.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/tnt2alt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/main.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/now.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/ncaa14.m3u8')">Stream 3</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -133,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://again.009292.xyz/tnt2.m3u8');
+            showPlayer('clappr', 'https://again.009292.xyz/main.m3u8');
         };
     </script>
     <script>
