--- a/nba.html
+++ b/nba.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-
 <html data-bs-theme="dark" lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
-<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/main.css" rel="stylesheet" type="text/css"/>
-<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-<style>
-<script>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>
+   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
+  </title>
+  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="css/main.css" rel="stylesheet" type="text/css"/>
+  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+  <style>
+   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -61,86 +62,197 @@
         h2 {
             color: pink;
         }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-black">
-<div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
-<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
-<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-</div>
-</div>
-</nav>
-<div class="container container-fluid pt-2 text-white">
-<div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NBA Events</h2>
-<table id="eventsTable">
-<thead>
-<tr>
-<th>Event</th>
-<th>Start Time</th>
-<th>Countdown</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-1">Dallas Mavericks vs Washington Wizard</a></td>
-<td>November 08, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-2">Tornoto Raptors vs Philadelphia 76ers</a></td>
-<td>November 08, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-3">Portland Trail Blazers vs Miami Heat</a></td>
-<td>November 08, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-4">Chicago Bulls vs Cleveland Cavaliers</a></td>
-<td>November 08, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-5">Los Angeles Lakers vs Atlanta Hawks</a></td>
-<td>November 08, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-6">New Orleans Pelicans vs San Antonio Spurs</a></td>
-<td>November 08, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-7">Indiana Pacers vs Dever Nuggets</a></td>
-<td>November 08, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/nba-streams-8">Phoenix Suns vs Los Angeles Clippers</a></td>
-<td>November 08, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00"></span></td>
-<tr>
-</tr></tr></tr></tr></tr></tr></tr></tr></tr></tbody>
-</table>
-</div>
-</div>
-<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
-</footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script>
-         function startCountdown() {
+  </style>
+ </head>
+ <body>
+  <nav class="navbar navbar-expand-lg bg-black">
+   <div class="container-fluid">
+    <a class="navbar-brand" href="https://roxiestreams.live/">
+     RoxieStreams
+    </a>
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/soccer">
+        Soccer
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/mlb">
+        MLB
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nba">
+        NBA
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nfl">
+        NFL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/fighting">
+        Fighting
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/motorsports">
+        Motorsports
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
+       </a>
+      </li>
+     </ul>
+    </div>
+   </div>
+  </nav>
+  <div class="container container-fluid pt-2 text-white">
+   <div class="mt-5">
+    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
+     Upcoming NBA Events
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Houston Rockets vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 09, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 12:30 PM:00" data-start="November 09, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs New York Knicks
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Boston Celtics vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Oklahoma City Thunder vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        November 09, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Detroit Pistons vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 09, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 4:30 PM:00" data-start="November 09, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Indiana Pacers vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 09, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 5:30 PM:00" data-start="November 09, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Minnesota Timberwolves vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 09, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 10, 2025 6:00 PM:00" data-start="November 09, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+  </div>
+  <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+   <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+    <li class="nav-item">
+     <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+      Stream Request (Discord)
+     </a>
+    </li>
+   </ul>
+   <p class="mb-0 text-body-secondary text-center text-lg-start">
+    Roxiestreams © 2024
+   </p>
+  </footer>
+  <script src="js/bootstrap.bundle.min.js">
+  </script>
+  <script>
+   function startCountdown() {
              var countdownElements = document.querySelectorAll('.countdown-timer');
  
              countdownElements.forEach(function(element) {
@@ -169,6 +281,6 @@
          }
  
          window.onload = startCountdown;
-     </script>
-</body>
+  </script>
+ </body>
 </html>
