--- a/nba.html
+++ b/nba.html
@@ -138,104 +138,238 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Houston Rockets vs Milwaukee Bucks
+         Dallas Mavericks vs Washington Wizard
         </a>
        </td>
        <td>
-        November 09, 2025 12:30 PM
+        November 08, 2025 16:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="November 10, 2025 12:30 PM:00" data-start="November 09, 2025 12:30 PM:00">
+        <span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:00:00">
         </span>
        </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-2">
-         Brooklyn Nets vs New York Knicks
-        </a>
-       </td>
-       <td>
-        November 09, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
-         Boston Celtics vs Orlando Magic
-        </a>
-       </td>
-       <td>
-        November 09, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
-         Oklahoma City Thunder vs Memphis Grizzlies
-        </a>
-       </td>
-       <td>
-        November 09, 2025 3:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Detroit Pistons vs Philadelphia 76ers
-        </a>
-       </td>
-       <td>
-        November 09, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 4:30 PM:00" data-start="November 09, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Indiana Pacers vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        November 09, 2025 5:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 5:30 PM:00" data-start="November 09, 2025 5:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Minnesota Timberwolves vs Sacramento Kings
-        </a>
-       </td>
-       <td>
-        November 09, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 10, 2025 6:00 PM:00" data-start="November 09, 2025 6:00 PM:00">
-        </span>
-       </td>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nba-streams-2">
+          Tornoto Raptors vs Philadelphia 76ers
+         </a>
+        </td>
+        <td>
+         November 08, 2025 16:00 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:00:00">
+         </span>
+        </td>
+        <tr>
+         <td>
+          <a href="https://roxiestreams.live/nba-streams-3">
+           Portland Trail Blazers vs Miami Heat
+          </a>
+         </td>
+         <td>
+          November 08, 2025 16:30 PM
+         </td>
+         <td>
+          <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00">
+          </span>
+         </td>
+         <tr>
+          <td>
+           <a href="https://roxiestreams.live/nba-streams-4">
+            Chicago Bulls vs Cleveland Cavaliers
+           </a>
+          </td>
+          <td>
+           November 08, 2025 16:30 PM
+          </td>
+          <td>
+           <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00">
+           </span>
+          </td>
+          <tr>
+           <td>
+            <a href="https://roxiestreams.live/nba-streams-5">
+             Los Angeles Lakers vs Atlanta Hawks
+            </a>
+           </td>
+           <td>
+            November 08, 2025 16:30 PM
+           </td>
+           <td>
+            <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00">
+            </span>
+           </td>
+           <tr>
+            <td>
+             <a href="https://roxiestreams.live/nba-streams-6">
+              New Orleans Pelicans vs San Antonio Spurs
+             </a>
+            </td>
+            <td>
+             November 08, 2025 17:00 PM
+            </td>
+            <td>
+             <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00">
+             </span>
+            </td>
+            <tr>
+             <td>
+              <a href="https://roxiestreams.live/nba-streams-7">
+               Indiana Pacers vs Dever Nuggets
+              </a>
+             </td>
+             <td>
+              November 08, 2025 17:00 PM
+             </td>
+             <td>
+              <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00">
+              </span>
+             </td>
+             <tr>
+              <td>
+               <a href="https://roxiestreams.live/nba-streams-8">
+                Phoenix Suns vs Los Angeles Clippers
+               </a>
+              </td>
+              <td>
+               November 08, 2025 17:00 PM
+              </td>
+              <td>
+               <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00">
+               </span>
+              </td>
+              <tr>
+              </tr>
+             </tr>
+            </tr>
+           </tr>
+          </tr>
+         </tr>
+        </tr>
+       </tr>
       </tr>
      </tbody>
     </table>
    </div>
+   <h2>
+    NBA Schedule for November 09, 2025
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-1">
+        Houston Rockets vs Milwaukee Bucks
+       </a>
+      </td>
+      <td>
+       November 09, 2025 12:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 12:30 PM:00" data-start="November 09, 2025 12:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-2">
+        Brooklyn Nets vs New York Knicks
+       </a>
+      </td>
+      <td>
+       November 09, 2025 3:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-3">
+        Boston Celtics vs Orlando Magic
+       </a>
+      </td>
+      <td>
+       November 09, 2025 3:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-4">
+        Oklahoma City Thunder vs Memphis Grizzlies
+       </a>
+      </td>
+      <td>
+       November 09, 2025 3:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 3:00 PM:00" data-start="November 09, 2025 3:00 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-5">
+        Detroit Pistons vs Philadelphia 76ers
+       </a>
+      </td>
+      <td>
+       November 09, 2025 4:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 4:30 PM:00" data-start="November 09, 2025 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-6">
+        Indiana Pacers vs Golden State Warriors
+       </a>
+      </td>
+      <td>
+       November 09, 2025 5:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 5:30 PM:00" data-start="November 09, 2025 5:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nba-streams-7">
+        Minnesota Timberwolves vs Sacramento Kings
+       </a>
+      </td>
+      <td>
+       November 09, 2025 6:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 6:00 PM:00" data-start="November 09, 2025 6:00 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
   </div>
   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
