--- a/nba.html
+++ b/nba.html
@@ -155,10 +155,10 @@
          </a>
         </td>
         <td>
-         November 08, 2025 16:00 PM
+         November 08, 2025 16:30 PM
         </td>
         <td>
-         <span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:00:00">
+         <span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 16:30:00">
          </span>
         </td>
         <tr>
@@ -181,10 +181,10 @@
            </a>
           </td>
           <td>
-           November 08, 2025 16:30 PM
+           November 08, 2025 17:00 PM
           </td>
           <td>
-           <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00">
+           <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 17:00:00">
            </span>
           </td>
           <tr>
@@ -194,10 +194,10 @@
             </a>
            </td>
            <td>
-            November 08, 2025 16:30 PM
+            November 08, 2025 17:00 PM
            </td>
            <td>
-            <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 16:30:00">
+            <span class="countdown-timer" data-end="November 09, 2025 04:30:00" data-start="November 08, 2025 17:00:00">
             </span>
            </td>
            <tr>
@@ -216,14 +216,14 @@
             <tr>
              <td>
               <a href="https://roxiestreams.live/nba-streams-7">
-               Indiana Pacers vs Dever Nuggets
+               Indiana Pacers vs Denver Nuggets
               </a>
              </td>
              <td>
-              November 08, 2025 17:00 PM
+              November 08, 2025 18:00 PM
              </td>
              <td>
-              <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00">
+              <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 18:00:00">
               </span>
              </td>
              <tr>
@@ -233,10 +233,10 @@
                </a>
               </td>
               <td>
-               November 08, 2025 17:00 PM
+               November 08, 2025 19:30 PM
               </td>
               <td>
-               <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 17:00:00">
+               <span class="countdown-timer" data-end="November 09, 2025 05:00:00" data-start="November 08, 2025 19:30:00">
                </span>
               </td>
               <tr>
