--- a/soccer.html
+++ b/soccer.html
@@ -95,116 +95,115 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Tottenham vs Manchester United</a>
-<td>November 08, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 03:30:00" data-start="November 08, 2025 04:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Athletic Club vs Real Oviedo</a>
+<td>November 09, 2025 05:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 04:00:00" data-start="November 09, 2025 05:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Girona vs Deportivo Alavés</a>
-<td>November 08, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:00:00" data-start="November 08, 2025 05:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Lorient vs Toulouse</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">NEOM vs Al Nassr</a>
-<td>November 08, 2025 05:50 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 04:50:00" data-start="November 08, 2025 05:50:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Bologna vs Napoli</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Union Berlin vs Bayern</a>
-<td>November 08, 2025 06:30 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 05:30:00" data-start="November 08, 2025 06:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Kocaelispor vs Galatasaray</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Everton vs Fulham</a>
-<td>November 08, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 06:00:00" data-start="November 08, 2025 07:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Aston Villa vs Bournemouth</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">West Ham vs Burnley</a>
-<td>November 08, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 06:00:00" data-start="November 08, 2025 07:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Brentford vs Newcastle</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Sevilla vs Osasuna</a>
-<td>November 08, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 06:15:00" data-start="November 08, 2025 07:15:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Crystal Palace vs Brighton</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Marseille vs Brest</a>
-<td>November 08, 2025 08:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 07:00:00" data-start="November 08, 2025 08:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Nottingham Forest vs Leeds</a>
+<td>November 09, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 05:00:00" data-start="November 09, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Juventus vs Torino</a>
-<td>November 08, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 08:00:00" data-start="November 08, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Dundee vs Rangers</a>
+<td>November 09, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 06:00:00" data-start="November 09, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Madrid vs Levante</a>
-<td>November 08, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 08:30:00" data-start="November 08, 2025 09:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Rayo Vallecano vs Real Madrid</a>
+<td>November 09, 2025 07:15 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 06:15:00" data-start="November 09, 2025 07:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Borussia M'gladbach vs Köln</a>
-<td>November 08, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 08:30:00" data-start="November 08, 2025 09:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Metz vs Nice</a>
+<td>November 09, 2025 08:15 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 07:15:00" data-start="November 09, 2025 08:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Sunderland vs Arsenal</a>
-<td>November 08, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 08:30:00" data-start="November 08, 2025 09:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Strasbourg vs Lille</a>
+<td>November 09, 2025 08:15 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 07:15:00" data-start="November 09, 2025 08:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Le Havre vs Nantes</a>
-<td>November 08, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 09:00:00" data-start="November 08, 2025 10:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Manchester City vs Liverpool</a>
+<td>November 09, 2025 08:30 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 07:30:00" data-start="November 09, 2025 08:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Unión Española vs Colo-Colo</a>
-<td>November 08, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 09:00:00" data-start="November 08, 2025 10:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Roma vs Udinese</a>
+<td>November 09, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 08:00:00" data-start="November 09, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Parma vs Milan</a>
-<td>November 08, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 10:45:00" data-start="November 08, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Mallorca vs Getafe</a>
+<td>November 09, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 08:30:00" data-start="November 09, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Chelsea vs Wolves</a>
-<td>November 08, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 11:00:00" data-start="November 08, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Corinthians vs Ceará</a>
+<td>November 09, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Espanyol vs Villarreal</a>
-<td>November 08, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 11:00:00" data-start="November 08, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Cruzeiro vs Fluminense</a>
+<td>November 09, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Monaco vs Lens</a>
-<td>November 08, 2025 12:05 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 11:05:00" data-start="November 08, 2025 12:05:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Vitória vs Botafogo</a>
+<td>November 09, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:00:00" data-start="November 09, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Vasco Da Gama vs Juventude</a>
-<td>November 08, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 12:00:00" data-start="November 08, 2025 13:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs River Plate</a>
+<td>November 09, 2025 11:30 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:30:00" data-start="November 09, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Minnesota United vs Seattle Sounders</a>
-<td>November 08, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 12:00:00" data-start="November 08, 2025 13:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Inter Milan vs Lazio</a>
+<td>November 09, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:45:00" data-start="November 09, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Internacional vs Bahia</a>
-<td>November 08, 2025 13:30 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 12:30:00" data-start="November 08, 2025 13:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Lyon vs PSG</a>
+<td>November 09, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 10:45:00" data-start="November 09, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Tigres UANL vs Atlético San Luis</a>
-<td>November 08, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 14:00:00" data-start="November 08, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Celta Vigo vs Barcelona</a>
+<td>November 09, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 11:00:00" data-start="November 09, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-17">Cincinnati vs Columbus Crew</a>
-<td>November 08, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 14:00:00" data-start="November 08, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Flamengo vs Santos</a>
+<td>November 09, 2025 13:30 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 12:30:00" data-start="November 09, 2025 13:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-21">Guadalajara vs Monterrey</a>
-<td>November 08, 2025 15:07 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 14:07:00" data-start="November 08, 2025 15:07:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Santos Laguna vs Pachuca</a>
+<td>November 09, 2025 15:30 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 14:30:00" data-start="November 09, 2025 15:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-18">Inter Miami vs Nashville</a>
-<td>November 08, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 16:00:00" data-start="November 08, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-18">Fortaleza vs Grêmio</a>
+<td>November 09, 2025 15:30 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 14:30:00" data-start="November 09, 2025 15:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-19">León vs Puebla</a>
-<td>November 08, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 16:00:00" data-start="November 08, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-19">Mirassol vs Palmeiras</a>
+<td>November 09, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 16:00:00" data-start="November 09, 2025 17:00:00"></span></td>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-20">San Diego vs Portland Timbers</a>
+<td>November 09, 2025 18:00 PM</td>
+<td><span class="countdown-timer" data-end="November 10, 2025 17:00:00" data-start="November 09, 2025 18:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-19">Cruz Azul vs Pumas UNAM</a>
-<td>November 08, 2025 18:05 PM</td>
-<td><span class="countdown-timer" data-end="November 09, 2025 17:05:00" data-start="November 08, 2025 18:05:00"></span></td>
-<tr>
-</tr></td></tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
