--- a/index.html
+++ b/index.html
@@ -118,34 +118,34 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-                    <td>November 08, 2025 04:30 AM</td>
-                    <td><span class="countdown-timer" data-start="November 08, 2025 04:30:00 PST"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</a></td>
-                    <td>November 08, 2025 05:00 AM</td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">Laliga</a></td>
+                    <td>November 09, 2025 05:00 AM</td>
                     <td><span class="countdown-timer" data-start="November 08, 2025 05:00:00 PST"></span></td>
                 </tr>
                 <tr>
+                    <td><a href="https://roxiestreams.live/motogp">MotoGP - Grand Prix</a></td>
+                    <td>November 09, 2025 05:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 09, 2025 10:00:00 PST"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+                    <td>November 09, 2025 06:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 09, 2025 06:00:00 PST"></span></td>
+                </tr>
+                <tr>
                     <td><a href="https://roxiestreams.live/f1-streams">Formula 1</a></td>
-                    <td>November 08, 2025 06:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 08, 2025 06:00:00 PST"></span></td>
+                    <td>November 09, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 09, 2025 10:00:00 PST"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</a></td>
-                    <td>November 08, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 08, 2025 09:00:00 PST"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NFL</a></td>
+                    <td>November 09, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 09, 2025 10:00:00 PST"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/ufc">UFC Vegas 111</a></td>
-                    <td>November 08, 2025 13:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 08, 2025 13:00:00 PST"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>November 08, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 08, 2025 16:00:00 PST"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-14">Superclásico</a></td>
+                    <td>November 09, 2025 11:30 AM</td>
+                    <td><span class="countdown-timer" data-start="November 09, 2025 11:30:00 PST"></span></td>
                 </tr>
                 <tr>
             </tbody>
