--- a/nfl.html
+++ b/nfl.html
@@ -151,8 +151,16 @@
      </tr>
      <tr>
       <td>
+       <a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
+      </td>
+      <td>
+       November 09, 2025 10:00 AM
+      </td>
+      <td>
        <a href="https://roxiestreams.live/nfl-streams-2">
-        New York vs Chicago Bears
+        New York Giants vs Chicago Bears
        </a>
       </td>
       <td>
