--- a/nfl.html
+++ b/nfl.html
@@ -152,12 +152,18 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
+        NFL Redzone
        </a>
       </td>
       <td>
        November 09, 2025 10:00 AM
       </td>
+      <td>
+       <span class="countdown-timer" data-end="November 10, 2025 6:30 AM:00" data-start="November 09, 2025 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-2">
         New York Giants vs Chicago Bears
