--- a/soccer-streams-15.html
+++ b/soccer-streams-15.html
@@ -97,7 +97,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/prem.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/golazo.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -132,7 +132,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://again.009292.xyz/prem.m3u8');
+            showPlayer('clappr', 'https://again.009292.xyz/golazo.m3u8');
         };
     </script>
     <script>
@@ -158,6 +158,6 @@
 	};
 </script>
 <script type="text/javascript" src="//monthspathsmug.com/4fb9813602118af6e6ec2974670023c9/invoke.js"></script>
-<script type='text/javascript' src='//monthspathsmug.com/ab/1a/c2/ab1ac2d66efae0c6bc04e68156bc710e.js'></script>s
+<script type='text/javascript' src='//monthspathsmug.com/ab/1a/c2/ab1ac2d66efae0c6bc04e68156bc710e.js'></script>
 </body>
 </html>
